--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ streamlit
 pandas
 plotly.express
 streamlit_option_menu
-PIL
-babel.numbers
-pickle
-joblib
+Pillow==9.5.0
+babel==2.13.1
+streamlit==1.15.0
+pandas==1.3.3
+scikit-learn==0.24.2
+xgboost==1.5.0
 numpy
