--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,204 @@
-streamlit
-pandas
-plotly.express
-streamlit_option_menu
+absl-py==2.0.0
+advertools==0.13.2
+aiohttp==3.7.0
+altair==5.1.1
+anyascii==0.3.2
+appnope==0.1.3
+astor==0.8.1
+asttokens==2.2.1
+astunparse==1.6.3
+async-timeout==3.0.1
+attrs==23.1.0
+Automat==22.10.0
+Babel==2.13.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+bokeh==3.2.1
+branca==0.6.0
+bs4==0.0.1
+cachetools==5.3.1
+category-encoders==2.6.1
+certifi==2023.5.7
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==3.1.0
+click==8.1.6
+cloudpickle==2.2.1
+colorama==0.4.6
+comm==0.1.3
+constantly==15.1.0
+contourpy==1.0.7
+contractions==0.1.73
+cryptography==41.0.1
+cssselect==1.2.0
+cycler==0.11.0
+Cython==0.29.36
+dcor==0.6
+debugpy==1.6.7
+decorator==5.1.1
+et-xmlfile==1.1.0
+executing==1.2.0
+fastjsonschema==2.17.1
+faust-cchardet==2.1.18
+fdasrsf==2.4.2
+filelock==3.12.2
+findiff==0.10.0
+flatbuffers==23.5.26
+folium==0.14.0
+fonttools==4.39.4
+fuzzy-c-means==1.7.0
+fuzzycmeans==1.0.4
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.37
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+googletransx==2.4.2
+grpcio==1.58.0
+h5py==3.9.0
+hydralit-components==1.0.10
+hyperlink==21.0.0
+idna==3.4
+imbalanced-learn==0.11.0
+imblearn==0.0
+importlib-metadata==6.8.0
+incremental==22.10.0
+ipykernel==6.22.0
+ipython==8.13.1
+itemadapter==0.8.0
+itemloaders==1.1.0
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.3.1
+jsonschema==4.17.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+keras==2.13.1
+kiwisolver==1.4.4
+lazy_loader==0.3
+libclang==16.0.6
+llvmlite==0.40.1
+lxml==4.9.2
+Markdown==3.4.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.4
+multimethod==1.9.1
+mysql-connector-python==8.0.33
+nbformat==5.9.0
+nest-asyncio==1.5.6
+networkx==3.1
+nltk==3.8.1
+numba==0.57.1
+numpy==1.24.3
+oauthlib==3.2.2
+openai==0.27.8
+openpyxl==3.1.2
+opt-einsum==3.3.0
+packaging==23.1
+pandas==1.5.3
+pandasai==0.6.10
+parsel==1.8.1
+parso==0.8.3
+patsy==0.5.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.5.0
-babel==2.13.1
-streamlit==1.15.0
-pandas==1.3.3
-scikit-learn==0.24.2
-xgboost==1.5.0
-numpy
-category-encoders==1.1.2
-joblib
-pickle5
+platformdirs==3.5.0
+plotly==5.15.0
+prompt-toolkit==3.0.38
+Protego==0.2.1
+protobuf==3.20.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyahocorasick==2.0.0
+pyarrow==12.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==1.10.12
+pydeck==0.8.1b0
+PyDispatcher==2.0.7
+Pygments==2.15.1
+pyOpenSSL==23.2.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3
+PyYAML==6.0.1
+pyzmq==25.0.2
+queuelib==1.6.2
+rdata==0.9
+regex==2023.6.3
+requests==2.31.0
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+rich==13.6.0
+rsa==4.9
+scikit-datasets==0.2.3
+scikit-fda==0.8.1
+scikit-fuzzy==0.4.2
+scikit-learn==1.3.0
+scipy==1.10.1
+Scrapy==2.9.0
+seaborn==0.12.2
+service-identity==23.1.0
+shap==0.42.1
+six==1.16.0
+sklearn==0.0.post5
+slicer==0.0.7
+smmap==5.0.1
+snowflake==0.0.4
+soupsieve==2.5
+squarify==0.4.3
+stack-data==0.6.2
+statsmodels==0.14.0
+streamlit==1.27.1
+streamlit-option-menu==0.3.6
+sympy==1.12
+tabulate==0.8.10
+tenacity==8.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-macos==2.13.0
+termcolor==2.3.0
+textsearch==0.0.24
+threadpoolctl==3.1.0
+tldextract==3.4.4
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.1
+tqdm==4.65.0
+traitlets==5.9.0
+Twisted==22.10.0
+twython==3.9.1
+typer==0.4.2
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==1.26.16
+validators==0.22.0
+w3lib==2.1.1
+wcwidth==0.2.6
+Werkzeug==2.3.7
+wordcloud==1.9.2
+wrapt==1.15.0
+xarray==2023.7.0
+xgboost==1.7.6
+xlrd==2.0.1
+xyzservices==2023.7.0
+yarl==1.9.2
+yellowbrick==1.5
+zipp==3.17.0
+zope.interface==6.0
